# video2audio

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
src/vid2aud/: __init__.py  converter.py  fsutils.py  settings.py  worker.py
src/vid2aud/gui/: __init__.py  app.py  dialogs.py  main_window.py  resources.qrc
